--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: #E8E8E8;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto Mono', monospace;
@@ -9,7 +9,7 @@ body{
   color: #333A56;
 }
 
-.navbar{
+.navbar {
   position: fixed;
   top: 0;
   z-index: 1;
@@ -20,22 +20,21 @@ body{
   justify-content: right;
 }
 
-.navbar a{
-  text-decoration: none; 
+.navbar a {
+  text-decoration: none;
   color: white;
   padding: 20px;
   font-size: 15px;
 }
 
-.header{
+.header {
   background-color: white;
   width: 100%;
-  height: 250px;
-  padding: 17vh 0 17vh 0;
+  padding: 12vh 0 6vh 0;
   position: relative;
 }
 
-.profile{
+.profile {
   background-image: url('../public/images/profile.jpg');
   background-size: 155px 160px;
   background-position: center;
@@ -46,14 +45,21 @@ body{
   border-radius: 50%;
 }
 
-.header h2{
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header h2 {
   color: #333A56;
   text-align: center;
 }
 
-.header p{
+.header p {
   color: #333A56;
   text-align: center;
+  max-width: 35%;
 }
 
 .button {
@@ -69,16 +75,17 @@ body{
   cursor: pointer;
 }
 
-.button2{
+.button2 {
   margin-left: 20px;
   padding: 0;
 }
 
-.button.active{
+.button.active {
   font-weight: bolder;
   color: #333A56;
 }
-.container{
+
+.container {
   max-width: 80%;
   margin: 10px auto 50px auto;
   display: flex;
@@ -89,27 +96,27 @@ body{
   padding: 0px 50px;
 }
 
-.box-item{
+.box-item {
   position: relative;
   width: 300px;
   height: auto;
   margin: 30px 20px;
 }
 
-.box-photo{
+.box-photo {
   background-color: #777e9c;
   width: 300px;
   height: 300px;
   transition: width .5s, height .5s, transform .5s;
 }
 
-.box-photo:hover{
+.box-photo:hover {
   width: 305px;
   height: 305px;
   transform: translate(-2.5px, 0px);
 }
 
-.box-content{
+.box-content {
   position: relative;
   padding: 2.5px 5px 2.5px 5px;
   font-size: smaller;
@@ -122,13 +129,13 @@ body{
   background-color: #333A56;
 }
 
-.footer p{
+.footer p {
   text-align: center;
-  color:white;
+  color: white;
   text-decoration: none;
 }
 
-.contact-list{
+.contact-list {
   margin: 0 auto;
   width: 100px;
   height: 25px;
@@ -136,18 +143,18 @@ body{
 
 
 /* for galaxy fold size */
-@media screen and (max-width: 375px){
-  .container{
+@media screen and (max-width: 375px) {
+  .container {
     max-width: 100%;
     margin: 0;
     padding: 0;
   }
 
-  .box-item{
+  .box-item {
     width: auto;
   }
 
-  .box-photo{
+  .box-photo {
     width: auto;
     height: auto;
   }
